--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,1 +1,24 @@
-<p>signup works!</p>
+<navbar></navbar>
+<div class="flex items-center justify-center my-auto px-4" style="height: calc(100vh - 64px);">
+    <div class="w-full max-w-xl">
+        <label class="mt-8 flex justify-center text-3xl font-bold text-gray-900">สมัครบัญชีผู้ใช้งาน</label>
+
+        <form class="mt-16 space-y-6" action="#" method="POST">
+            <input type="hidden" name="remember" value="true">
+            <div class="rounded-md shadow-sm">
+                <input type="text" id="email-address" name="email" class="input" placeholder="Username" required>
+            </div>
+            <div class="rounded-md shadow-sm">
+                <input type="password" id="password" name="password" class="input" placeholder="Password" required>
+            </div>
+            <div class="rounded-md shadow-sm">
+                <input type="password" id="confirmPassword" name="confirmPassword" class="input" placeholder="Confirm-Password" required>
+            </div>
+            <div class="rounded-md shadow-sm">
+                <input type="email" id="email" name="email" class="input" placeholder="Email" required>
+            </div>
+
+            <button type="submit" class="button-primary">ยืนยัน</button>
+        </form>
+    </div>
+</div>
