Done Page Category

--- a/src/app/category/high-grade/high-grade.component.html
+++ b/src/app/category/high-grade/high-grade.component.html
@@ -1,1 +1,68 @@
-<p>high-grade works!</p>
+<navbar></navbar>
+
+<header class="bg-white mt-8">
+    <div class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8">
+        <label class="category-title">HG : High Grade</label>
+        <div class="flex justify-center mt-3">
+            <label class="category-subtitle">
+                โมเดลเกรด HG มีอัตราส่วนอยู่ที่ 1/144 ซึ่งสูงประมาณ 13 เซนติเมตร เกรดนี้มีลักษณะที่สมจริง
+                และมีรายละเอียดมากมาย เช่น มีสติกเกอร์ติดมาด้วย
+                จุดเด่นของกล่องรุ่น HG คือป้ายตัวอักษรสีทอง และภาพภูมิทัศน์หลังหุ่นกันดั้ม
+            </label>
+        </div>
+    </div>
+</header>
+
+<main>
+    <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
+        <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+            <div class="group relative">
+                <div
+                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between px-3">
+                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
+                    <p class="text-lg font-bold text-gray-900">420฿</p>
+                </div>
+            </div>
+
+            <div class="group relative">
+                <div
+                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between px-3">
+                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
+                    <p class="text-lg font-bold text-gray-900">420฿</p>
+                </div>
+            </div>
+
+            <div class="group relative">
+                <div
+                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between px-3">
+                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
+                    <p class="text-lg font-bold text-gray-900">420฿</p>
+                </div>
+            </div>
+
+            <div class="group relative">
+                <div
+                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                </div>
+                <div class="mt-4 flex justify-between px-3">
+                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
+                    <p class="text-lg font-bold text-gray-900">420฿</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
