--- a/src/app/category/high-grade/high-grade.component.html
+++ b/src/app/category/high-grade/high-grade.component.html
@@ -19,7 +19,7 @@
             <div class="group relative">
                 <div
                     class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between px-3">
@@ -31,7 +31,7 @@
             <div class="group relative">
                 <div
                     class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between px-3">
@@ -43,7 +43,7 @@
             <div class="group relative">
                 <div
                     class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between px-3">
@@ -55,7 +55,7 @@
             <div class="group relative">
                 <div
                     class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://tailwindui.com/img/ecommerce-images/product-page-01-related-product-01.jpg"
+                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between px-3">
