--- a/src/app/category/high-grade/high-grade.component.html
+++ b/src/app/category/high-grade/high-grade.component.html
@@ -5,9 +5,8 @@
         <label class="category-title">HG : High Grade</label>
         <div class="flex justify-center mt-3">
             <label class="category-subtitle">
-                โมเดลเกรด HG มีอัตราส่วนอยู่ที่ 1/144 ซึ่งสูงประมาณ 13 เซนติเมตร เกรดนี้มีลักษณะที่สมจริง
-                และมีรายละเอียดมากมาย เช่น มีสติกเกอร์ติดมาด้วย
-                จุดเด่นของกล่องรุ่น HG คือป้ายตัวอักษรสีทอง และภาพภูมิทัศน์หลังหุ่นกันดั้ม
+                โมเดลเกรด HG มีอัตราส่วนอยู่ที่ 1/144 (ประมาณ 13 เซนติเมตร) เกรดนี้มีลักษณะที่สมจริง
+                และมีรายละเอียดมาก จุดเด่นของรุ่น HG คือป้ายตัวอักษรสีทอง และภาพภูมิทัศน์หลังหุ่น
             </label>
         </div>
     </div>
@@ -17,8 +16,7 @@
     <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -29,8 +27,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -41,8 +38,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -53,8 +49,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
