--- a/src/app/category/perfect-grade/perfect-grade.component.html
+++ b/src/app/category/perfect-grade/perfect-grade.component.html
@@ -1,12 +1,11 @@
 <navbar></navbar>
 <header class="bg-white mt-8">
     <div class="mx-auto max-w-7xl py-6 px-4 sm:px-6 lg:px-8">
-        <label class="flex justify-center text-3xl font-bold tracking-tight text-gray-900">MG : Master Grade</label>
+        <label class="flex justify-center text-3xl font-bold tracking-tight text-gray-900">PG : Perfect Grade</label>
         <div class="flex justify-center mt-3">
             <label class="text-xl w-7/12 text-center tracking-tight text-gray-400">
-                โมเดลเกรด เกรด PG ไม่เพียงแต่จะมีรายละเอียดที่มากที่สุด มีกลไกที่ดีที่สุด <br>
-                และมีลูกเล่นที่ดีที่สุดเท่านั้น แต่ PG ยังเป็นกันพลาที่สเกลใหญ่ที่สุดในตลาดอีกด้วย<br>
-                รุ่นนี้มีขนาดอยู่ที่ 1/60 ซึ่งสูงประมาณ 30 เซนติเมตร!
+                โมเดลเกรด เกรด PG ไม่เพียงแต่จะมีรายละเอียดที่มากที่สุด มีกลไกที่ดีที่สุด และยังมี <br>
+                สเกลใหญ่ที่สุดในตลาดอีกด้วย รุ่นนี้มีขนาดอยู่ที่ 1/60 ซึ่งสูงประมาณ 30 เซนติเมตร!
             </label>
         </div>
     </div>
@@ -16,8 +15,7 @@
     <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -28,8 +26,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -40,8 +37,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -52,8 +48,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
