--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,9 +1,10 @@
-<div class="container md:mx-auto border-4 border-red-500 relative h-[500px] w-[700px] mt-[10em] font-sans">
+<div class="container font-inter md:mx-auto h-[500px] w-[700px] mt-[20em] font-sans">
     <div class="gap-y-80 columns-1 text-center mt-[12em]">
         <h1 class="text-2xl mb-7">ตะกร้าของคุณยังว่างอยู่</h1>
         <div class="text-2xl font-bold border-1 max-w-[10em] text-center ml-[9.5em]">
-            <!--class="text-2xl font-bold border-1 border-black bg-black text-white max-w-[10em] text-center ml-[9.5em]-->
-            <button class="p-2 w-[10em] rounded-none text-white bg-black drop-shadow-2xl hover:bg-slate-900">Submit</button>
+            <button
+                class="p-2 w-[10em] rounded-none text-white bg-black drop-shadow-2xl hover:bg-slate-900">Click here</button>
         </div>
-    </div> 
+    </div>
 </div>
+<footer class="absolute left-11 bottom-[20px]">@cannabin shop</footer>
