--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,10 +7,14 @@
 @layer components {
 
     .item-navbar{
-        //  Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" 
         @apply px-3 py-2 rounded-md text-sm font-medium
-        text-gray-300
-        hover:bg-gray-700 hover:text-white;
+        text-neutral-100
+        hover:bg-neutral-700 hover:text-white;
+    }
+    .item-navbar-active{
+        @apply px-3 py-2 rounded-md text-sm font-medium
+        bg-neutral-700 text-white  
+        hover:bg-neutral-700 hover:text-white;
     }
 
     .input {
