--- a/src/app/category/tool/tool.component.html
+++ b/src/app/category/tool/tool.component.html
@@ -3,7 +3,8 @@
         <label class="flex justify-center text-3xl font-bold tracking-tight text-gray-900">Tools</label>
         <div class="flex justify-center mt-3">
             <label class="text-xl w-7/12 text-center tracking-tight text-gray-400">
-                เครื่องต่างๆที่ใช้ในการประกอบกันพลา ซึ่งจะช่วยให้ประกอบตัวโมเดลออกมาสมบูรณ์มากขึ้น
+                เครื่องมือต่างๆที่ใช้ในการประกอบกันพลา<br>
+                ซึ่งจะช่วยให้ประกอบตัวโมเดลออกมาสมบูรณ์มากขึ้น
             </label>
         </div>
     </div>
@@ -13,8 +14,7 @@
     <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -25,8 +25,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -37,8 +36,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
@@ -49,8 +47,7 @@
             </div>
 
             <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
                     <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
