--- a/src/app/category/master-grade/master-grade.component.html
+++ b/src/app/category/master-grade/master-grade.component.html
@@ -13,51 +13,14 @@
 <main>
     <div class="mx-auto max-w-2xl py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
         <div class="grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-            <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
-                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                </div>
-                <div class="mt-4 flex justify-between px-3">
-                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
-                    <p class="text-lg font-bold text-gray-900">420฿</p>
-                </div>
-            </div>
 
-            <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
-                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+            <div *ngFor="let mastergrade of masterGradeList" class="group relative">
+                <div class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
+                    <img [src]="mastergrade.productURL" class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex justify-between px-3">
-                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
-                    <p class="text-lg font-bold text-gray-900">420฿</p>
-                </div>
-            </div>
-
-            <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
-                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                </div>
-                <div class="mt-4 flex justify-between px-3">
-                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
-                    <p class="text-lg font-bold text-gray-900">420฿</p>
-                </div>
-            </div>
-
-            <div class="group relative">
-                <div
-                    class="min-h-80 w-full aspect-w-1 aspect-h-1 lg:aspect-none lg:h-80 overflow-hidden category-item">
-                    <img src="https://cdn.discordapp.com/attachments/1029261631118651444/1032006407387631686/unknown.png"
-                        class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                </div>
-                <div class="mt-4 flex justify-between px-3">
-                    <p class="text-lg text-gray-700"><a href="#">HARLEQUIN</a></p>
-                    <p class="text-lg font-bold text-gray-900">420฿</p>
+                    <p class="text-lg text-gray-700"><a href="#">{{ mastergrade.name }}</a></p>
+                    <p class="text-md font-bold text-gray-900">{{ mastergrade.price | currency:'THB':'symbol-narrow':'' }}</p>
                 </div>
             </div>
         </div>
