--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,35 +24,36 @@
 
     .button-primary {
         @apply flex w-full justify-center rounded-md border border-transparent py-2 px-4 
-        bg-green-600 text-lg text-white 
-        hover:bg-green-700 
-        focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2;
+        bg-neutral-600 text-lg text-white 
+        hover:bg-neutral-700 
+        focus:outline-none focus:ring-2 focus:ring-neutral-500 focus:ring-offset-2;
     }
 
     .button-secondary {
         @apply flex w-full justify-center rounded-md border border-transparent py-2 px-4 
-        bg-inherit text-lg text-green-600 border-green-600
-        hover:bg-inherit  hover:text-green-700 hover:border-green-700
-        focus:outline-none focus:ring-2 focus:ring-green-700 focus:ring-offset-2;
+        bg-inherit text-lg text-neutral-600 border-neutral-600
+        hover:bg-inherit  hover:text-neutral-700 hover:border-neutral-700
+        focus:outline-none focus:ring-2 focus:ring-neutral-700 focus:ring-offset-2;
     }
 
     .button-tertiary  {
         @apply flex w-full justify-center rounded-md border border-transparent py-2 px-4 
-        bg-inherit text-lg text-green-600
-        hover:bg-inherit  hover:text-green-700
+        bg-inherit text-lg text-neutral-600
+        hover:bg-inherit  hover:text-neutral-700
     }
 
     .category-title {
         @apply flex justify-center text-3xl font-bold tracking-tight 
-        text-gray-900;
+        text-neutral-900;
     }
 
     .category-subtitle {
         @apply text-xl w-7/12 text-center tracking-tight 
-        text-gray-400;
+        text-neutral-400;
     }
 
     .category-item {
-        @apply rounded-lg border border-indigo-200 group-hover:opacity-90 group-hover:border-indigo-700;
+        @apply rounded-lg border border-neutral-300 group-hover:opacity-90 group-hover:border-neutral-800
+        shadow-[inset_00_-15px_50px_1px_rgba(0,0,0,0.15)];
     }
 }
