--- a/src/app/category/perfect-grade/perfect-grade.component.html
+++ b/src/app/category/perfect-grade/perfect-grade.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="mt-4 flex justify-between px-3">
                     <p class="text-lg text-gray-700"><a href="#">{{ perfectgrade.name }}</a></p>
-                    <p class="text-md font-bold text-gray-900">{{ perfectgrade.price | currency:'THB':'symbol-narrow':'' }}</p>
+                    <p class="text-lg font-bold text-gray-900">{{ perfectgrade.price | currency:'THB':'symbol-narrow':'' }}</p>
                 </div>
             </div>
         </div>
