--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,12 @@ html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar { 
+    display: none;
 }
 
 @tailwind base;
