--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,1 +1,40 @@
-<p>account works!</p>
+<div class="mx-auto w-full max-w-screen-lg px-4 sm:px-6 lg:px-8 my-32">
+    <div class="grid grid-cols-1">
+
+        <div id="header" class="text-xl">
+            <h1 class="font-bold">MY ACCOUNT</h1>
+            <p class="left-5 text-sm relative opacity-40">WELCOME BACK, USER!</p>
+        </div>
+
+        <div class="mt-7 flex gap-10">
+            <div class="flex-auto">
+                <h1 class="font-bold mb-3 ">MY ORDERS</h1>
+                <hr>
+
+                <div>
+                    <!--ORDERS HERE-->
+                    <p class="opacity-40 mt-5">YOU HAVEN'T PLACE ANY ORDERS YET</p>
+                </div>
+
+            </div>
+
+            <div class="flex-auto w-20">
+                <h1 class="font-bold mb-3">PRIMARY ADDRESS</h1>
+                <hr>
+                <div>
+                    <!--INFORMATION HERE-->
+                    <p class="opacity-40 mt-5">FIRSTNAME LASTNAME</p>
+                    <p class="opacity-40 mt-3">THAILAND</p>
+                </div>
+                <button class="mt-5 p-2 w-[9em] rounded-none text-white bg-black drop-shadow-2xl hover:bg-slate-900">EDIT ADDRESS</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+<footer class="bg-black mx-auto mt-32 w-full max-w-full px-4 sm:px-6 lg:px-8 border-2 border-red-500">
+    <div>
+        1
+    </div>
+</footer>
