--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,5 +81,22 @@ body::-webkit-scrollbar {
     .avatar-active {
         @apply rounded-full focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800;
     }
+
+    .button-cart {
+        @apply rounded-md border border-transparent py-2 px-20 min-w-full
+        bg-neutral-700 text-base text-white 
+        hover:bg-neutral-800 
+        focus:outline-none focus:ring-2 focus:ring-neutral-500 focus:ring-offset-2;
+    }
+
+    .button-amount{
+        @apply
+        px-8 py-2 rounded-md bg-neutral-700 text-2xl text-white font-bold;
+    }
+
+    .input-amount{
+        @apply
+        text-center w-16 text-2xl placeholder-black border-black mr-2;
+    }
 }
 
