--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<navbar></navbar>
 <p-toast position="bottom-right"></p-toast>
-<router-outlet></router-outlet>
+<router-outlet class="relative">
+    <navbar></navbar>
+</router-outlet>
