--- a/src/app/view/cart/cart.component.html
+++ b/src/app/view/cart/cart.component.html
@@ -16,11 +16,11 @@
 <div class="mx-auto w-full max-w-screen-lg px-4 sm:px-6 lg:px-0 my-20">
 
     <div class="flex flex-col">
-        <p class="align-middle text-center font-bold text-3xl"> CART </p>
+        <p class="align-middle text-center font-bold text-3xl">ตะกร้า</p>
         <div class="flex flex-row justify-between mt-9 mb-4 font-bold">
-            <p class="flex w-64">PRODUCT</p>
-            <p class="flex">QUANTITY</p>
-            <p class="flex">TOTAL</p>
+            <p class="flex w-64">สินค้า</p>
+            <p class="flex">จำนวน</p>
+            <p class="flex">ราคา</p>
         </div>
         <hr>
         <!--ORDER HERE-->
