done login and register

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,12 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@300&display=swap');
+
+* {
+    font-family: 'Mitr', sans-serif;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
