เเก้ nav bar router

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="mx-auto max-w-7xl py-2 sm:px-6 lg:px-8">
         <div class="flex h-20 items-center justify-between">
             <div class="flex items-center">
-                <a href="home">
+                <a routerLink="home">
                     <img class="h-32 w-32"
                         src="https://cdn.discordapp.com/attachments/1021435603688099913/1037374937096261692/13_20221102213655.png">
                 </a>
