--- a/src/app/view/home/home.component.scss
+++ b/src/app/view/home/home.component.scss
@@ -1,5 +1,5 @@
 .box {
-    height: 80vh;
+    height: calc(100vh - 96px);
 }
 
 .center {
@@ -22,4 +22,48 @@
 .delay:hover {
     transition: all 0.6s;
     transform: scale(1.05);
+}
+
+.img-landing {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.img-container {
+    height: calc(100vh - 96px);
+}
+
+.font-custom {
+    margin: 2rem;
+    font-size: 8rem;
+    font-family: 'Bebas Neue', cursive;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: translate(0, 25%);
+    z-index: 5;
+    animation: move 3s linear infinite alternate;
+}
+
+@keyframes move {
+    0% {
+        bottom: 0px;
+    }
+
+    25% {
+        bottom: 15px;
+    }
+
+    50% {
+        bottom: 30px;
+    }
+
+    75% {
+        bottom: 15px;
+    }
+
+    100% {
+        bottom: 0px;
+    }
 }
