--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -12,7 +12,7 @@
     </p-carousel>
 </div>
 
-<p class="text-5xl text-center font-bold pt-12">สินค้าของเรา</p>
+<p class="text-5xl text-center font-bold pt-12">สินค้าตัวอย่าง</p>
 <div class="grid grid-cols-3 w-full pt-12">
     <div class="flex flex-col">
         <div class="overflow-hidden flex justify-center" style="height: 400px;">
