fix position menu

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -29,7 +29,7 @@
                             {{ user.firstname | slice:0:1 }}{{ user.lastname | slice:0:1}}
                         </p>
                     </button>
-                    <p-menu #menu [popup]="true" [model]="items" styleClass="mt-3"></p-menu>
+                    <p-menu #menu [popup]="true" [model]="items" styleClass="mt-3 -ml-40"></p-menu>
                 </div>
 
                 <ng-template #login>
