--- a/src/app/view/category/master-grade/master-grade.component.html
+++ b/src/app/view/category/master-grade/master-grade.component.html
@@ -19,9 +19,8 @@
                         class="h-full w-full object-cover object-center lg:h-full lg:w-full">
                 </div>
                 <div class="mt-4 flex flex-col">
+                    <p class="text-lg font-bold text-gray-900">{{ mastergrade.price | currency:'THB':'symbol-narrow':''}}</p>
                     <p class="text-lg text-gray-700">{{ mastergrade.name }}</p>
-                    <p class="text-lg font-bold text-gray-900">{{ mastergrade.price | currency:'THB':'symbol-narrow':''}}
-                    </p>
                 </div>
             </div>
         </div>
